[package]
name = "rinex"
version = "0.22.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX file parsing, analysis and production"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/rinex"
keywords = ["geo", "gnss", "gps", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.83"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
# serde by default
# gzip files are supported by default
default = ["flate2", "serde"]

# unlock objects serialization
serde = [
    "dep:serde",
    "gnss-rs/serde",
    "hifitime/serde",
    "bitflags/serde",
    "ublox/serde",
]

# OBSERVATION RINEX Iterators & methods. Unlocks signal combinations.
obs = []

# NAVIGATION RINEX (decoded radio messages) Iterators & methods.
# Unlocks navigation calculations including Kepler solver and Ut1Provider.
nav = [
    "anise",
    "nalgebra",
]

# Provides the special UT1-TAI methods
ut1 = [
    "hifitime/ut1",
]

# METEO RINEX dedicated Iterators & methods.
meteo = []

# CLOCK (Special RINEX) dedicated Iterators & methods.
clock = []

# ANTEX for accurate antenna characteristics: dedicated Iterators & methods.
antex = []

# BINEX RNX2BIN and BIN2RNX serdes
binex = [
    "dep:binex"
]

# RTCM RTCM2RNX and RNX2RTCM serdes
rtcm = [
    "dep:rtcm-rs",
]

# RINEX to GNSS protos
protos = [
    "dep:gnss-protos",
]

# RINEX to UBX serializer and UBX helpers
ublox = [
    "dep:ublox",
    "dep:gnss-protos",
]

# Unlock Quality Check and TEQC like methods & traits.
qc = [
    "dep:maud",
    "dep:gnss-qc-traits", 
] 

# Unlocks the Filter designer, pre and post processing algorithms.
processing = [
    "qc",
    "gnss-qc-traits/processing",
]

# Unlock all features, at once
full = [
    "antex",
    "clock",
    "flate2",
    "meteo",
    "nav",
    "obs",
    "processing",
    "serde",
    "binex",
    "rtcm",
    "ut1",
    "ublox",
    "serde",
]

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies.gnss-rs]
git = "https://github.com/nav-solutions/gnss"
rev = "dc4d4c2d413a3be90a3fa08a6ab29079eec13923"
features = ["std", "domes", "cospar", "sbas"]

[dependencies.gnss-qc-traits]
git = "https://github.com/nav-solutions/qc-traits"
rev = "63200d41bab2efa7d10082ae43a113d360722342"
optional = true
features = ["html"]

[dependencies.binex]
version = "0.5"
optional = true

[dependencies.gnss-protos]
version = "0.0.2"
optional = true
features = ["gps"]

[dependencies.ublox]
git = "https://github.com/ublox-rs/ublox"
rev = "d43c425ee2904d577d06e70d7fbd80d98132a8a6"
optional = true
features = ["std", "sfrbx-gps"]

[dependencies.hifitime]
version = "4.1"
features = ["std"]

[dependencies.anise]
version = "0.9"
optional = true

[dependencies]
thiserror = "2"
bitflags = "2"
lazy_static = "1"
itertools = "0.14"
flate2 = { version = "1", optional = true }
maud = { version = "0.26", optional = true }
rtcm-rs = { version = "0.11", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

nalgebra = { version = "0.34", optional = true }

# Log is optional and our "debug" feature: use this if you're a dev.
# Turn this on to obtain debug traces during parsing, formatting and calculations
# Use DEBUG sensitivy for all traces.
# Use normal sensitivy for error / warning traces.
log = { version = "0.4", optional = true }

# TODO see if we can get rid of those
num = "0.4"
num-derive = "0.4"
num-traits = "0.2.15"
num-integer = "0.1.44"

[dev-dependencies]
flate2 = "1"
rand = "0.9"
serde_json = "1"
criterion = "0.8"
env_logger = "0.11"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "hatanaka"
harness = false
